# docker_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
docker_bot/: docker_crud.py  keyboards.py  main.py  states.py
docker_bot/core/: config.py
docker_bot/handlers/: __init__.py  main.py
